assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@600&display=swap');

* {
    border: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    border: 1px solid red;
}

body {
    color: black;
    font-family: Montserrat, sans-serif;
    font-weight: 300;
}

/* html, body {
    height: 100%;
    margin: 0;
}

.wrapper {
    min-height: 100%;
    margin-bottom: -60px;
}

.footer,
.push {
  height: 60px;
} */

/* Heading - logo and navigation */

h1 {
    color: black;
    font-family: Open Sans, sans-serif;
}

h2, h3 {
    color: white;
    font-family: Open Sans, sans-serif;  
}

#logo {
    float: left;
    font-size: 250%;
    margin-left: 50px;
}

#menu {
    float: right;
    font-size: 120%;
}

#menu li {
    float: left;
    list-style-type: none;
    margin-right: 50px;
}

#menu a {
    color: inherit;
    text-decoration: none;
}

#menu, #logo {
    line-height: 80px;
}

#menu a:hover {
   color: #82263e;
   text-decoration: underline;
}

/* .active {
    color: #82263e;
    text-decoration: underline;  
} */

/* Home page - hero image section */

#hero-image {
    background: url(../images/hero-image-large.jpg) no-repeat center center;
    height: 500px;
    overflow: hidden;
    width: 100%;
}

#hero-text {
    display: flex;
    font-size: 120%; 
    justify-content: flex-end;  
    margin-right: 50px;
   
    top: 120px;
    right: 80px;

    position: absolute;
}

#hero-text h3 {
    font-size: 90%; 
    font-style: italic;
    float: right;
    margin-right: 80px;

    top: 80px;
    right: 120px;

    position: absolute;
}

/* Services section */

.services {
    color: black;
    display: flex;
    justify-content: space-evenly;
    width: 100%;
}

.services div {
    line-height: 1.3;
    margin: 40px;
    text-align: center;
    width: 25%;
    padding-top: 0;
}

.services h2 {
    color: black;
}

.services p {
    padding-top: 10px;
}

/* Footer section */

.footer {
    background-color: gray;
    height: 60px;
    text-align: center;
    position: fixed;
    width: 100%;

    left: 0;
    bottom: 0;

    padding-top: 12px;
}

.footer ul {
    display: flex;
    font-size: 250%;
    justify-content: space-evenly;
    list-style-type: none;
    margin: auto 30%;
}

.footer i {
    color: black;
}

.footer i:hover {
    color: #82263e;
    text-decoration: underline;
}   

/* About Us Page */

/* Section one - About Us */

.about-us {
    background-color: #82263e;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: 100%;
    padding-left: 70px;
    padding-top: 30px;
    padding-bottom: 30px;
    width: 100%;
    justify-content: space-evenly;
    color: white;
    position: relative;
}

.about-us p {
    justify-content: right;
    line-height: 1.3;
    margin-top: 2%;
}

#about-us-text {
    width: 50%;
    text-align: justify;
}

#about-us-img {
    width: 80%;
    margin-left: 15%;
    padding: 5%;
}

/* Section two - Location details */

.location-container {
    display: flex;
    padding-top: 30px;
    padding-bottom: 30px;
    width: 100%;  
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    color: black;
    position: absolute;
}

.location-text {
    width: 50%;
    text-align: justify;
    float: left;
}

.location-text h2 {
    color: black;
}

.location-text p {
    justify-content: right;
    line-height: 1.3;
    margin-top: 2%;
}

.map-responsive {
    overflow:hidden;
    padding-bottom: 27%;
    position:relative;
    height:0;
}

.map-responsive iframe {
    left:0;
    top:0;
    position: sticky;
    float: right;
    margin-right: 12%;
}

/* Media queries */

/* For large to medium screens sizes from 1200px wide and down */
@media screen and (max-width: 1200px) {
    #logo {
        margin-left: 30px;
    }
    
    #menu {
        font-size: 100%;
    }

    #menu li {
        margin-right: 20px;
    }

    #menu, #logo {
        line-height: 50px;
    }

    #hero-image {
        background: url(../images/hero-image-medium.jpg) no-repeat center center;
        height: 400px;
        overflow: hidden;
        width: 100%;
    }

    #hero-text {
        top: 15%;
        right: 20px;
        left: 42%;
        text-align: right;
    }
    
    #hero-text h3 {
        top: 110%;
        right: 0;
        padding-right: 0%;
        margin-right: 0;
    }

    .services {
        padding-left: 0;
    }
}

/* For medium screens sizes from 950px wide and down */
@media screen and (max-width: 950px) {
    #hero-text {
        top: 15%;
        right: 2%;
        left: 20%;
        text-align: right;
    }

    #hero-text h3 {
        top: 110%;
        right: 0;
        padding-right: 0%;
        margin-right: 0;
    }

    .services {
        padding-left: 0;
    }
}

/* For small screens sizes from 800px wide and down */
@media screen and (max-width: 800px){
    #logo {
        text-align: center;
        margin-left: 0;
        margin-right: 0;
        margin-top: 3%;
    }
    
    #menu {
        float: none;
        font-size: 80%;
        text-align: center;
    }
    
    #menu li {
        margin: 2%;
        display: inline;
    }

    #menu a {
        padding:0 5px;
    }

    #hero-text {
        float: none;
        font-size: 100%;
        text-align: center; 
    
        top: 20%;
        left: 5%;
    }
    
    #hero-text h3 {
        font-size: 90%; 
        float: none;
        margin-right: 80px;
        text-align: center;
        margin-right: 0;

        top: 120%;
        left: 5%;
    }

    .services {
        flex-direction: column;
        align-items: center;
        width: 100%;
    }
    
    .services div {
        margin: 10px;
        text-align: center;
        width: 90%;
    }

    .footer {
        position: relative;
    }

    .about-us {
        padding-left: 0;
    }

    .about-us h2 {
        text-align: center;     
    }

    #about-us-text {
        width: 75%;
        line-height: 1.5;
    }
}

